HV-1872 Enable experimental bytebuddy support for JDK19+